# cpp_formatting

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MODULE.bazel  README.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
cpp_formatting/: BUILD  cpp_format.cpp  embedded_clang_resource.cpp  embedded_clang_resource.h  integration_test.sh  naming_convention.cpp  naming_convention.h  naming_convention_test.cpp  normalize_variables.cpp  normalize_variables_integration_test.sh  output_mode.h  rename_variables_lib.cpp  rename_variables_lib.h  rename_variables_test.cpp  trailing_return_types.cpp  trailing_return_types_lib.cpp  trailing_return_types_lib.h  trailing_return_types_test.cpp
cpp_formatting/testdata/: expected.cpp  expected2.cpp  expected3.cpp  input.cpp  input2.cpp  input3.cpp  normalize_multi_expected.cpp  normalize_multi_expected.h  normalize_multi_input.cpp  normalize_multi_input.h  normalize_order_expected.h  normalize_order_impl_expected.cpp  normalize_order_impl_input.cpp  normalize_order_input.h  normalize_order_test_expected.cpp  normalize_order_test_input.cpp  normalize_shadow_expected.cpp  normalize_shadow_input.cpp
patches/: llvm_smallvector_cstdint.patch
